fixing whitespace

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ Whitish: #cadcff
 Light grey: #dcdcdc
 */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #ffffff;
     margin: 0;
@@ -128,6 +132,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: end;
+    margin-top: -2px;
 }
 
 .tab {
@@ -156,6 +161,16 @@ header {
     border-top: 3px solid #ff256e;
 }
 
+#hide {
+    width: 100%;
+    height: 10px;
+    margin-top: -30px;
+    border: 1px solid white;
+    background-color: white;
+    position: absolute;
+    z-index: 2;
+}
+
 .projects-content {
     display: flex;
     justify-content: center;
@@ -173,9 +188,9 @@ header {
     background-color: #ffffff;
     color: #ff256e;
     height: 45px;
-    margin-bottom: -3px;
+    margin-bottom: -5px;
     border: 3px solid #ff256e;
-    border-bottom: white;
+    border-bottom: none;
 }
 
 button:hover {
